<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/user_info" />
        <item
            android:id="@+id/nav_assessment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/hodnotenie" />
        <item
            android:id="@+id/nav_assessment_terminy"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/hodnotenie_terminy" />
        <item
            android:id="@+id/nav_terminy_predmetov"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/terminy_predmetov" />
    </group>


</menu>
